--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ main {
     width: 100%;
     
     .logo-img{
-      width: 45px;
+      width: 120px;
     }
 
     .menu-options{
@@ -44,10 +44,25 @@ main {
 
         &:hover {
         color: $color-primary;
+        transition: all 500ms;
       }
     }
-    
+  }
 
+  button{
+    border-radius: 24px;
+    border: none;
+    padding: 10px;
+    color: rgb(51, 51, 51);
+    background-color: white;
+    font-weight: 600;
+    font-size: 18px;
+  }
+
+  button:hover{
+    color: rgb(255, 255, 255);
+    background-color: $color-primary;
+    transition: all 500ms;
   }
 }
 
